# IntentProbe

./: .gitignore  CITATION.cff  CODEOWNERS  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  action.yml  llms-full.txt  llms.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  false-positive.yml  missed-detection.yml
.github/workflows/: intentprobe-action-smoke.yml  package-smoke.yml
docs/: DEMO_SCRIPT.md  EVIDENCE_PACKET.md  FAQ.md  GITHUB_ACTION.md  NPM_RELEASE.md  OPERATOR_DECISIONS.md  PYPI_RELEASE.md  REDDIT_LAUNCH.md  RELEASE_CHECKLIST.md  RUNTIME_HOOKS.md  SAMPLE_REPORTING.md  V0_2_DEMO_PACK.md  demo.html  intentprobe-vs-existing-mcp-scanners.md
examples/: runtime_toy_agent.py
intentprobe/: __init__.py  __main__.py  cli.py  hook.py
intentprobe/scanner/: __init__.py  cli.py  configs.py  core.py  hook.py  model_registry.py  static_checks.py
npm/: README.md  package.json
research/: QWEN_PROMPT_JUDGE_BASELINE_2026-06-08.md  README.md  SCANNER_PIPELINE.md  __init__.py  activation_scanner_cli.py  activation_scanner_cli_regression.py  activation_scanner_core.py  activation_scanner_hook.py  activation_scanner_hook_regression.py  benchmark_qwen_prompt_judge.py  scanner_static.py
research/benchmarks/: model_registry.py
research/fixtures/: activation_scanner_regression_cases.json
tests/: test_core_policy.py  test_scan_config.py  test_static_checks.py
training/: model_compare.py  model_compare_v2.py
